[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/menus/console/Console.gd" type="Script" id=1]
[ext_resource path="res://ui/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/window/close.png" type="Texture" id=6]
[ext_resource path="res://fonts/ConsoleFont.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="GDScript" id=5]
script/source = "extends RichTextLabel

func _ready():
	connect(\"resized\", self, \"_resized\")

func _resized():
	yield(get_tree(), \"idle_frame\")
	yield(get_tree(), \"idle_frame\")
	yield(get_tree(), \"idle_frame\")
	
	rect_min_size.y = get_v_scroll().get_max()
"

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.0392157, 0.0392157, 0.0392157, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -9.0
focus_mode = 2
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1024.0
focus_mode = 2
mouse_filter = 2
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
selection_enabled = true
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopOutput" type="RichTextLabel" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -9.0
focus_mode = 2
mouse_filter = 2
size_flags_vertical = 3
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputContainer" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -9.0
rect_min_size = Vector2( 0, 8 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="InputContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.278431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InputContainer"]
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="InputContainer"]
margin_left = 7.0
margin_top = 1.0
margin_right = 1009.0
margin_bottom = 9.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
caret_blink = true
caret_blink_speed = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_top = 13.0
margin_right = -12.0
margin_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 13, 13 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 7 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="InputContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
